<resources>
    <string name="app_name">DesignPattern</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="error_invalid_email">Invalid password</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
</resources>
